--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
             android:name=".ListViewActivity"
             android:label="@string/title_activity_list_view" >
         </activity>
+        <activity
+            android:name=".ListViewIconActivity"
+            android:label="@string/title_activity_list_view_icon" >
+        </activity>
     </application>
 
 </manifest>
