--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,10 @@
             android:name=".FragmentActivity"
             android:label="@string/title_activity_fragment" >
         </activity>
+        <activity
+            android:name=".BorderActivity"
+            android:label="@string/title_activity_border" >
+        </activity>
     </application>
 
 </manifest>
